--- a/01-data-exploration.ipynb
+++ b/01-data-exploration.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "e9fe5d3c",
+   "metadata": {},
+   "source": [
+    "###  This notebook contains scripts to explore the data and visualise different derived features"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "a422a9e0",
@@ -8,7 +16,6 @@
    "outputs": [],
    "source": [
     "from osgeo import gdal\n",
-    "#import gdal\n",
     "import numpy as np\n",
     "import matplotlib \n",
     "import matplotlib.pyplot as plt\n",
@@ -17,8 +24,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4ce8845c",
+   "metadata": {},
+   "source": [
+    "### Load the data"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "id": "eafd1798",
    "metadata": {},
    "outputs": [],
@@ -38,6 +53,14 @@
     "# replace missing values if necessary\n",
     "if np.any(data_array == nodataval):\n",
     "    data_array[data_array == nodataval] = np.nan"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "39ebe9aa",
+   "metadata": {},
+   "source": [
+    "### Visualise"
    ]
   },
   {
@@ -88,8 +111,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "938c66fc",
+   "metadata": {},
+   "source": [
+    "### Plot out data with Matplotlib's 'contour'\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "id": "4f9c85f9",
    "metadata": {},
    "outputs": [
@@ -107,7 +138,6 @@
     }
    ],
    "source": [
-    "#Plot out data with Matplotlib's 'contour'\n",
     "fig = plt.figure(figsize = (5, 5))\n",
     "ax = fig.add_subplot(111)\n",
     "plt.contour(data_array)\n",
@@ -212,8 +242,6 @@
    ],
    "source": [
     "slparray = slp.GetRasterBand(1).ReadAsArray()\n",
-    "\n",
-    "\n",
     "# Don't use matplotlib to visualize the slope\n",
     "# Use richdem as shown below\n",
     "plt.figure()\n",
@@ -253,8 +281,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d7ca2687",
+   "metadata": {},
+   "source": [
+    "### Visualise slope and aspect features in the DTM"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "id": "1bcd50c9",
    "metadata": {},
    "outputs": [],
@@ -264,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 27,
    "id": "8c4c92ee",
    "metadata": {},
    "outputs": [
@@ -377,7 +413,7 @@
       "\u001b[2K[================================================  ] (97% - 0.0s - 1 threads)\r",
       "\u001b[2K[================================================= ] (98% - 0.0s - 1 threads)\r",
       "\u001b[2K[================================================= ] (99% - 0.0s - 1 threads)\r",
-      "\u001b[2Kt Wall-time = 0.0126271\u001b[39m\n"
+      "\u001b[2Kt Wall-time = 0.0111069\u001b[39m\n"
      ]
     },
     {
@@ -541,18 +577,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "3ee67081",
+   "cell_type": "markdown",
+   "id": "af54115a",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "dataset = gdal.Open(file_path)"
+    "### Print metadata"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 29,
    "id": "cf41b374",
    "metadata": {},
    "outputs": [
@@ -569,6 +603,7 @@
     }
    ],
    "source": [
+    "dataset = gdal.Open(file_path)\n",
     "# Getting som info about our DEM\n",
     "print(\"Driver: {}/{}\".format(dataset.GetDriver().ShortName,\n",
     "                            dataset.GetDriver().LongName))\n",
@@ -611,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 30,
    "id": "d112ecfa",
    "metadata": {},
    "outputs": [
@@ -677,7 +712,6 @@
     "plt.colorbar()\n",
     "plt.title(\"interp Firsoff HiRISE 5 (low res) gray scale\")\n",
     "plt.show()\n",
-    "\n",
     "\n",
     "#Plot a contourf graph on data_array_interp\n",
     "plt.figure(figsize=(5,5))\n",
@@ -788,7 +822,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:gmap] *",
+   "display_name": "Python [conda env:gmap]",
    "language": "python",
    "name": "conda-env-gmap-py"
   },
