--- a/02-features.ipynb
+++ b/02-features.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "08d2dda0",
+   "metadata": {},
+   "source": [
+    "### This notebook contains the scripts to visualise the features used to train Neural Networks for segmentation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "4599f458",
@@ -109,6 +117,7 @@
     "\n",
     "            with rasterio.open(self.df.at[i, 'mask'].replace('/content/drive/My Drive/Image Segmentation/Resized Sets','MarsData')) as mask:\n",
     "                mask_array = mask.read(1)\n",
+    "                \n",
     "            mask_array = np.where(mask_array == 0.5, 0, mask_array)                        \n",
     "        return dem_array, hillshade_array, slope_array, mask_array\n",
     "      \n",
@@ -198,7 +207,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:gmap] *",
+   "display_name": "Python [conda env:gmap]",
    "language": "python",
    "name": "conda-env-gmap-py"
   },
